--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Lunch Menu</title>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" data-th-href="@{/css/style.css}" />
-	</head>
-	<body>
-		<table border="1">
-			<thead>
-				<tr align="center">
-					<th>순번</th>
-					<th>메뉴</th>
-					<th>가게</th>
-				</tr>
-			</thead>
-			<tbody align="center">
-				<tr data-th-each="vo : ${menu}" data-th-if="${menu.size() > 0}">
-					<td width="50px" data-th-text="${vo.no}"></td>
-					<td width="100px" data-th-text="${vo.menu}"></td>
-					<td width="200px" data-th-text="${vo.store}"></td>
-				</tr>
-				<tr>
-					<th colspan="3" height="30px">
-						<form data-th-method="get" data-th-action="@{/menu}">
-							<button>새로고침</button>
-						</form>
-					</th>				
-				</tr>
-			</tbody>
-		</table>
-	</body>
+<head>
+<title>Lunch Menu</title>
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" data-th-href="@{/css/style.css}" />
+</head>
+<body>
+	<div class="m-mt50" align="center">
+		<img data-th-src="@{/img/KIMIDS.png}" />
+	</div>
+	<h1 align="center">오늘의 점심 메뉴</h1>
+	<h2 align="center" data-th-text="${date}"></h2>
+	<table class="m-mt30" border="1">
+		<thead>
+			<tr align="center">
+				<th>순번</th>
+				<th>메뉴</th>
+				<th>가게</th>
+			</tr>
+		</thead>
+		<tbody align="center">
+			<tr data-th-each="vo : ${menu}" data-th-if="${menu.size() > 0}">
+				<td width="50px" data-th-text="${vo.no}"></td>
+				<td width="100px" data-th-text="${vo.menu}"></td>
+				<td width="200px" data-th-text="${vo.store}"></td>
+			</tr>
+			<tr>
+				<th colspan="3" height="30px">
+					<a data-th-href="@{|/menu/${menu_1}|}"><button>새로고침</button></a>
+					<a data-th-href="@{/}"><button>홈으로</button></a>
+				</th>
+			</tr>
+		</tbody>
+	</table>
+</body>
 </html>
