--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Lunch Menu</title>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" data-th-href="@{/css/style.css}" />
+	<title>Lunch Menu</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" data-th-href="@{/css/style.css}" />
 </head>
 <body>
 	<div class="m-mt50" align="center">
@@ -27,8 +27,7 @@
 			</tr>
 			<tr>
 				<th colspan="3" height="30px">
-					<a data-th-href="@{|/menu/${menu_1}|}"><button>새로고침</button></a>
-					<a data-th-href="@{/}"><button>홈으로</button></a>
+					<a data-th-href="@{/menu}"><button>새로고침</button></a>
 				</th>
 			</tr>
 		</tbody>
