[ 2022. 02 .16 ] 1. JPA 사용하여 DB에 저장 및 조회 기능 추가 2. vo 객체 Setter Getter 로 변수 저장 및 조회 가능하도록 변경 3. 메뉴 선정 내역 조회 페이지 추가 4. Log 형식 변경

--- a/bin/src/main/resources/templates/home.html
+++ b/bin/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="m-mt50" align="center">
-			<img data-th-src="@{/img/lunch.jpg}" />
+			<img data-th-src="@{/img/KIMIDS.png}" />
 		</div>
 		<div class="card-body" align="center">
 			<div>
@@ -15,7 +15,6 @@
 				<h2>점심 선정을 위해 메뉴 선택 후 버튼을 눌러주세요 !</h2>
 				<h2>3 가지의 추천 메뉴가 나옵니다.</h2>
 				<a data-th-href="@{/menu}"><button>메뉴 선정</button></a>
-				<a data-th-href="@{/history}"><button>메뉴 선정 내역</button></a>
 			</div>
 		</div>
 	</body>
