--- a/bin/src/main/resources/templates/menu.html
+++ b/bin/src/main/resources/templates/menu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="m-mt50" align="center">
-		<img data-th-src="@{/img/lunch.jpg}" />
+		<img data-th-src="@{/img/KIMIDS.png}" />
 	</div>
 	<h1 align="center">오늘의 점심 메뉴</h1>
 	<h2 align="center" data-th-text="${date}"></h2>
@@ -30,7 +30,6 @@
 			<tr>
 				<th colspan="4" height="30px">
 					<a data-th-href="@{/menu}"><button>새로고침</button></a>
-					<a data-th-href="@{/}"><button>홈으로</button></a>
 				</th>
 			</tr>
 		</tbody>
