--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -6,11 +6,7 @@
 	<link rel="stylesheet" type="text/css" data-th-href="@{/css/style.css}" />
 </head>
 <body>
-	<div class="m-mt50" align="center">
-		<img data-th-src="@{/img/lunch.jpg}" />
-	</div>
-	<h1 align="center">오늘의 점심 메뉴</h1>
-	<h2 align="center" data-th-text="${date}"></h2>
+	<h1 align="center">점심 메뉴 내역</h1>
 	<table class="m-mt30" border="1">
 		<thead>
 			<tr align="center">
@@ -18,18 +14,19 @@
 				<th>순번</th>
 				<th>메뉴</th>
 				<th>가게</th>
+				<th>일자</th>
 			</tr>
 		</thead>
 		<tbody align="center">
-			<tr data-th-each="vo : ${menu}" data-th-if="${menu.size() > 0}">
+			<tr data-th-each="vo : ${history}" data-th-if="${history.size() > 0}">
 				<td width="100px" data-th-text="${vo.div}"></td>
 				<td width="50px" data-th-text="${vo.no}"></td>
 				<td width="100px" data-th-text="${vo.menu}"></td>
 				<td width="200px" data-th-text="${vo.store}"></td>
+				<td width="200px" data-th-text="${vo.date}"></td>
 			</tr>
 			<tr>
-				<th colspan="4" height="30px">
-					<a data-th-href="@{/menu}"><button>새로고침</button></a>
+				<th colspan="5" height="30px">
 					<a data-th-href="@{/}"><button>홈으로</button></a>
 				</th>
 			</tr>
