[ 2022. 02. 17 ] 1. DB Column 명과 VO 객체 변수 변경 ( menu -> nation , store -> menu ) 2. home 화면 수정
- 메인 화면 추가 및 로그인 기능 , 게시판 기능 구현 예정

--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -21,8 +21,8 @@
 			<tr data-th-each="vo : ${history}" data-th-if="${history.size() > 0}">
 				<td width="100px" data-th-text="${vo.div}"></td>
 				<td width="50px" data-th-text="${vo.no}"></td>
-				<td width="100px" data-th-text="${vo.menu}"></td>
-				<td width="200px" data-th-text="${vo.store}"></td>
+				<td width="100px" data-th-text="${vo.nation}"></td>
+				<td width="200px" data-th-text="${vo.menu}"></td>
 				<td width="200px" data-th-text="${vo.date}"></td>
 			</tr>
 			<tr>
