--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -24,8 +24,8 @@
 			<tr data-th-each="vo : ${menu}" data-th-if="${menu.size() > 0}">
 				<td width="100px" data-th-text="${vo.div}"></td>
 				<td width="50px" data-th-text="${vo.no}"></td>
-				<td width="100px" data-th-text="${vo.menu}"></td>
-				<td width="200px" data-th-text="${vo.store}"></td>
+				<td width="100px" data-th-text="${vo.nation}"></td>
+				<td width="200px" data-th-text="${vo.menu}"></td>
 			</tr>
 			<tr>
 				<th colspan="4" height="30px">
