[ 2022. 09. 02 ] # Architecture Change + Add Save Menu List Function

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,7 @@
 				<h2>점심 선정을 위해 아래 버튼을 눌러주세요 !</h2>
 				<h2>3 가지의 추천 메뉴가 나옵니다.</h2>
 				<a data-th-href="@{/menu}"><button>메뉴 선정</button></a>
+				<a data-th-href="@{/menu/add}"><button>메뉴 추가</button></a>
 				<a data-th-href="@{/history}"><button>메뉴 선정 내역</button></a>
 			</div>
 		</div>
