--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
 				<a data-th-href="@{/menu}"><button>메뉴 선정</button></a>
 				<a data-th-href="@{/menu/add}"><button>메뉴 추가</button></a>
 				<a data-th-href="@{/history}"><button>메뉴 선정 내역</button></a>
+				<a data-th-hreff="@{/user}"><button>구독 서비스 신청</button></a>
 			</div>
 		</div>
 	</body>
