--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,10 +14,19 @@
 				<h1>안녕하세요</h1>
 				<h2>점심 선정을 위해 아래 버튼을 눌러주세요 !</h2>
 				<h2>3 가지의 추천 메뉴가 나옵니다.</h2>
-				<a data-th-href="@{/menu}"><button>메뉴 선정</button></a>
+				<form th:action="@{/menu}" th:method="GET">
+					<select name="nation">
+						<option th:value="empty" th:text="선택"></option>
+						<option th:value="한식" th:text="한식"></option>
+						<option th:value="중식" th:text="중식"></options>
+						<option th:value="일식" th:text="일식"></option>
+						<option th:value="양식" th:text="양식"></option>
+					</select>
+					<button>메뉴 선정</button>
+				</form>
 				<a data-th-href="@{/menu/add}"><button>메뉴 추가</button></a>
 				<a data-th-href="@{/history}"><button>메뉴 선정 내역</button></a>
-				<a data-th-hreff="@{/user}"><button>구독 서비스 신청</button></a>
+				<a data-th-href="@{/user}"><button>구독 서비스 신청</button></a>
 			</div>
 		</div>
 	</body>
