--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,43 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    ...
-  </head>
-  <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" th:fragment="header">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">My Study project</a>
+	<!-- Top navigation-->
+    <nav th:fragment="header" class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+        <div class="container-fluid">
+            <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                    <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#!">Action</a>
+                            <a class="dropdown-item" href="#!">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#!">Something else here</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li th:classappend="${module == 'home' ? 'active' : ''}">
-              <a href="#" th:href="@{/}">Home</a>
-            </li>
-            <li th:classappend="${module == 'tasks' ? 'active' : ''}">
-              <a href="#" th:href="@{/task}">Tasks</a>
-            </li>
-          </ul>
-          <!--<ul class="nav navbar-nav navbar-right">
-            <li th:if="${#authorization.expression('!isAuthenticated()')}">
-              <a href="/signin" th:href="@{/signin}">
-                <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Sign in
-              </a>
-            </li>
-            <li th:if="${#authorization.expression('isAuthenticated()')}">
-              <a href="/logout" th:href="@{#}" onclick="$('#form').submit();">
-                <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout
-              </a>
-             <form style="visibility: hidden" id="form" method="post" action="#" th:action="@{/logout}"></form>
-            </li>
-          </ul>-->
-        </div>
-      </div>
-    </div>
-  </body>
+    </nav>
 </html>
