Feat ( Subscribe Service )
Rename Controller, Service
Add Subscribe Menu in Bootstrap Template
Change Discord Id
Feat Email , Name Validation when subscribe service regist

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -6,11 +6,9 @@
     	</div>
         <div class="list-group list-group-flush">
             <a data-th-href="@{/menu}" class="list-group-item list-group-item-action list-group-item-light p-3">Select Menu</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
+            <a data-th-href="@{/menu/all}"class="list-group-item list-group-item-action list-group-item-light p-3">All Menu</a>
+            <a data-th-href="@{/subscribe}"class="list-group-item list-group-item-action list-group-item-light p-3">Subscribe Sevice</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Component</a>
         </div>
         <div class="md-5 text-center fs-6">
 	      &copy; 2023 zun's Study WebPage
