--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
                     <p>
                         문의사항은 Email과 Discord로 요청부탁드립니다.
                         <p class="text-center">Email : <code>yuog12@gmail.com</code></p>
-                        <p class="text-center">Discord ID : <code>22zun#6655</code></p>
+                        <p class="text-center">Discord ID : <code>ezun#6655</code></p>
                     </p>
                 </div>
             </th:block>
