--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -8,7 +8,8 @@
             <a data-th-href="@{/menu}" class="list-group-item list-group-item-action list-group-item-light p-3">Select Menu</a>
             <a data-th-href="@{/menu/all}"class="list-group-item list-group-item-action list-group-item-light p-3">All Menu</a>
             <a data-th-href="@{/subscribe}"class="list-group-item list-group-item-action list-group-item-light p-3">Subscribe Sevice</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Component</a>
+            <a data-th-href="@{/subscribe/cancel}"class="list-group-item list-group-item-action list-group-item-light p-3">Subscribe Cancel</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Sample</a>
         </div>
         <div class="md-5 text-center fs-6">
 	      &copy; 2023 zun's Study WebPage
