--- a/src/main/resources/templates/subscribe/subscribeCancel.html
+++ b/src/main/resources/templates/subscribe/subscribeCancel.html
@@ -19,34 +19,21 @@
 		<th:block th:replace="fragments/sidebar :: sidebar"></th:block>
 		<div id="page-content-wrapper">
 			<th:block th:replace="fragments/header :: header"></th:block>
-			<div data-th-if="${menu.size() > 0}" align="center" class="card-body">
-				<h1 class="h1">
-					<p th:text="${date}"></p><p>모든 메뉴 목록</p>
-				</h1>
-				<table class="table" border="3">
-					<thead>
-						<tr align="center">
-							<th>
-								메뉴
-							</th>
-							<th>
-								종류
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="vo : ${menu}"  align="center">
-							<td th:text="${vo.menu}"></td>
-							<td th:text="${vo.nation}"></td>
-						</tr>
-					</tbody>
-				</table>
+			<br>
+			<h3 align="center">
+				<p th:text="${date}"></p><p>구독 서비스 취소</p>
+			</h3>
+			<div class="container-fluid" align="center">
+				<form th:action="@{/subscribe/cancel/save}" th:method="POST">
+					<input id="email" name="email" placeholder="이메일 주소">
+					<button type="submit">구독 취소</button>
+				</form>
 			</div>
 		</div>
 	</div>
 	<!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
